// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIModal Should be possible to do snapshot testing on the modal 1`] = `
<div
  aria-hidden={true}
  className="xui-mask"
  data-automationid="xui-modal--mask"
  id="test-modal"
  onClick={null}
>
  <section
    aria-describedby={undefined}
    aria-labelledby={undefined}
    className="xui-modal xui-modal-width-medium xui-modal-layout"
    data-automationid="xui-modal"
    role={null}
    style={null}
    tabIndex={-1}
  >
    <header
      className="xui-modal--header xui-modal--heading xui-padding-left-large"
      data-automationid="xui-modal--header"
    >
      <button
        className="xui-button xui-modal--close xui-button-icon"
        data-automationid="xui-modal--close"
        disabled={false}
        onClick={[Function]}
        onKeyDown={undefined}
        tabIndex={0}
        title="Close"
        type="button"
      >
        <svg
          className="xui-icon"
          data-automationid={undefined}
          focusable="false"
          style={null}
          viewBox="0 0 30 30"
        >
          <path
            d="M14.6568542,13.2426407 L10.4142136,9 L9,10.4142136 L13.2426407,14.6568542 L9,18.8994949 L10.4142136,20.3137085 L14.6568542,16.0710678 L18.8994949,20.3137085 L20.3137085,18.8994949 L16.0710678,14.6568542 L20.3137085,10.4142136 L18.8994949,9 L14.6568542,13.2426407 Z"
            role="presentation"
            transform={undefined}
          />
        </svg>
      </button>
    </header>
    <div>
      test
    </div>
  </section>
</div>
`;

exports[`XUIModal should render an automation id when a qaHook is passed in 1`] = `
<div
  aria-hidden={true}
  className="xui-mask"
  data-automationid="xui-modal--mask"
  id={undefined}
  onClick={null}
>
  <section
    aria-describedby={undefined}
    aria-labelledby={undefined}
    className="xui-modal xui-modal-width-medium xui-modal-layout"
    data-automationid="xui-modal"
    role={null}
    style={null}
    tabIndex={-1}
  >
    <header
      className="xui-modal--header xui-modal--heading xui-padding-left-large"
      data-automationid="xui-modal--header"
    >
      <button
        className="xui-button xui-modal--close xui-button-icon"
        data-automationid="xui-modal--close"
        disabled={false}
        onClick={[Function]}
        onKeyDown={undefined}
        tabIndex={0}
        title="Close"
        type="button"
      >
        <svg
          className="xui-icon"
          data-automationid={undefined}
          focusable="false"
          style={null}
          viewBox="0 0 30 30"
        >
          <path
            d="M14.6568542,13.2426407 L10.4142136,9 L9,10.4142136 L13.2426407,14.6568542 L9,18.8994949 L10.4142136,20.3137085 L14.6568542,16.0710678 L18.8994949,20.3137085 L20.3137085,18.8994949 L16.0710678,14.6568542 L20.3137085,10.4142136 L18.8994949,9 L14.6568542,13.2426407 Z"
            role="presentation"
            transform={undefined}
          />
        </svg>
      </button>
    </header>
    <div>
      test
    </div>
  </section>
</div>
`;
